SpiderData/51cto/Clean/00871.txt
Python语言是一款对缩进非常敏感的语言，给很多初学者带来了困惑，即便是很有经验的Python程序员，也可能陷入陷阱当中。最常见的情况是tab和空格的混用会导致错误，或者缩进不对，而这是用肉眼无法分别的。

在编译时会出现这样的错IndentationError:expected an indented block说明此处需要缩进，你只要在出现错误的那一行，按空格或Tab（但不能混用）键缩进就行。

往往有的人会疑问：我根本就没缩进怎么还是错，不对，该缩进的地方就要缩进，不缩进反而会出错，比如：

模式一：

#coding:utf-8

money=["张总","王总","李总","刘经理","×××吴大妈","程序员的我"]

for man in money:

print man

print len(money)

运行结果：

D:\PF\Python> python test.py

File "test.py", line 7

print man

^

IndentationError: expected an indented block

模式二：

#coding:utf-8

money=["张总","王总","李总","刘经理","×××吴大妈","程序员的我"]

for man in money:

print man

print len(money)

运行结果

D:\PF\Python> python test.py

张总

6

王总

6

李总

6

刘经理

6

×××吴大妈

6

程序员的我

6

模式三：

#coding:utf-8

money=["张总","王总","李总","刘经理","×××吴大妈","程序员的我"]

for man in money:

print man

print len(money)

运行结果：

D:\PF\Python> python test.py

张总

王总

李总

刘经理

×××吴大妈

程序员的我

6

